# tradingsimulator

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: __init__.py  config.py
backend/app/models/: __init__.py  domain.py
backend/app/services/: backtest.py  costs.py  execution.py  indicators.py  liquidity.py  market_data.py  opportunities.py  orchestrator.py  risk.py  sample_data.py  ticker_master.py
backend/app/strategies/: __init__.py  rules.py
backend/scripts/: healthcheck.py  run_api.py
backend/tests/: test_backtest.py  test_market_data.py  test_opportunities.py  test_risk.py  test_routes.py  test_ticker_master.py
config/: simulator.example.yaml
docs/: architecture.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/components/: MetricTile.tsx  OpportunityTable.tsx  ScannerTable.tsx  TradeChart.tsx  TradeJournal.tsx
frontend/src/lib/: api.ts  sampleResult.ts  types.ts
